----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-07-05 Marc Delisle  <lem9@users.sourceforge.net>
    * footer.inc.php, index.php, queryframe.php: bug 981939, database
      selection in left frame under Opera, and problems with dropdown
      in left frame when many databases are there (original theme),
      thanks to Michael Keck

2004-07-02 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php: put Create button on the same line as the input field

2004-07-01 Michal Čihař  <michal@cihar.com>
    * lang/czech: Updated.

2004-07-01 Marc Delisle  <lem9@users.sourceforge.net>
    * queryframe.php: improve XHTML
    * lang/serbian: Updated, thanks to Mihailo Stefanovic (mikis).
    * lang/spanish: Updated, thanks to Daniel Hinostroza (hinostroza).
    * lang/dutch: Update thanks to Ivo Teel - calimonk.

2004-06-30 Marc Delisle  <lem9@users.sourceforge.net>
    * left.php: fix against security alert, thanks to Garvin
    * Documentation.html: FAQ 8.2 for security alert
    * config.inc.php, lang/*, libraries/display_export.lib.php,
      libraries/config_import.lib.php, libraries/common.lib.php,
      libraries/export/sql.php: bug 981359: now the hexadecimal encoding
      of binary fields is optional, because there are fields marked binary
      that have text contents, like mysql.user
    ### 2.5.7-pl1 released

2004-06-30 Alexander M. Turek  <me@derrabus.de>
    * libraries/common.lib.php: Fix against $_REQUEST['cfg'] exploits.

2004-06-29 Michal Čihař  <michal@cihar.com>
    * lang/check_lang.sh: Checks for diffstat presence.

2004-06-28 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/slovak: Updated, thanks to Lubos Klokner (erkac)
    ### 2.6.0-beta2 released


2004-06-27 Michal Čihař  <michal@cihar.com>
    * lang/*: Make all export choices look simmilar ('drop table' -> DROP
      TABLE), removed unused strings (there vere MANY!), fixed some czech
      texts.