@@ -10,6 +10,7 @@ $Source$
       selection in left frame under Opera, and problems with dropdown
       in left frame when many databases are there (original theme),
       thanks to Michael Keck
+    * header.inc.php: bug 965594: spaces after colons, and remove old code
 
 2004-07-02 Marc Delisle  <lem9@users.sourceforge.net>
     * main.php: put Create button on the same line as the input field
